--- a/index.html
+++ b/index.html
@@ -58,29 +58,168 @@
 
       <section class="benefits">
         <div class="container">
-					<h2 class="visually-hidden">Benefits</h2>
-					<ul class="list-reset benefits__list">
-						<li class="benefits__item">
-							<div class="benefits__text">
-								<div class="benefits__subtitle"></div>
-								<div class="benefits__descr"></div>
-							</div>
-						</li>
-						<li class="benefits__item">
-							<div class="benefits__text">
-								<div class="benefits__subtitle"></div>
-								<div class="benefits__descr"></div>
-							</div>
-						</li>
-						<li class="benefits__item">
-							<div class="benefits__text">
-								<div class="benefits__subtitle"></div>
-								<div class="benefits__descr"></div>
-							</div>
-						</li>
-					</ul>
-				</div>
+          <h2 class="visually-hidden">Benefits</h2>
+          <ul class="list-reset benefits__list">
+            <li class="benefits__item benefits__item--speed">
+              <div class="benefits__text">
+                <h3 class="benefits__subtitle">Speed</h3>
+                <p class="benefits__descr">
+                  Open a commercial-grade current account from anywhere
+                </p>
+              </div>
+            </li>
+            <li class="benefits__item benefits__item--design">
+              <div class="benefits__text">
+                <h3 class="benefits__subtitle">Design</h3>
+                <p class="benefits__descr">
+                  Open a commercial-grade current account from anywhere
+                </p>
+              </div>
+            </li>
+            <li class="benefits__item benefits__item--modularity">
+              <div class="benefits__text">
+                <h3 class="benefits__subtitle">Modularity</h3>
+                <p class="benefits__descr">
+                  Open a commercial-grade current account from anywhere
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="slogan">
+        <div class="container slogan__container">
+          <div class="slogan__content">
+            <h2 class="visually-hidden">Slogan</h2>
+            <img src="./img/slogan.svg" alt="Druk img" class="slogan__img" />
+            <p class="slogan__descr">
+              “Join a community of industry leading professionals. Join a
+              community of industry leading professionals.“
+            </p>
+            <h4 class="slogan__autor">Laura Paula</h4>
+            <a href="#" class="slogan__link">Director @Company</a>
+            <div class="slogan__btns">
+              <button class="btn btn--small"></button>
+              <button class="btn btn--small btn--grey"></button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="portfolio__title">Landing pages</h2>
+          <ul class="portfolio__list list-reset">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link">
+                <figure class="portfolio__figure">
+                  <img
+                    src="./img/layout-1.jpg"
+                    alt="Works layout"
+                    class="portfolio__works"
+                  />
+                  <figcaption class="portfolio__figurcaption">
+                    Landing one
+                  </figcaption>
+                </figure>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link">
+                <figure class="portfolio__figure">
+                  <img
+                    src="./img/layout-2.jpg"
+                    alt="Works layout"
+                    class="portfolio__works"
+                  />
+                  <figcaption class="portfolio__figurcaption">
+                    Landing two
+                  </figcaption>
+                </figure>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link">
+                <figure class="portfolio__figure">
+                  <img
+                    src="./img/layout-3.jpg"
+                    alt="Works layout"
+                    class="portfolio__works"
+                  />
+                  <figcaption class="portfolio__figurcaption">
+                    Landing three
+                  </figcaption>
+                </figure>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link">
+                <figure class="portfolio__figure">
+                  <img
+                    src="./img/layout-4.jpg"
+                    alt="Works layout"
+                    class="portfolio__works"
+                  />
+                  <figcaption class="portfolio__figurcaption">
+                    Landing four
+                  </figcaption>
+                </figure>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <h2 class="visually-hidden">Footer</h2>
+        <div class="footer-top">
+          <div class="footer-top__brand">
+            <a href="#" class="logo logo--mr">
+              <img src="./img/logo.svg" alt="Blanco logo" />
+            </a>
+            <button class="btn footer-top__btn">Get on Webflow</button>
+          </div>
+          <div class="footer-top__links">
+            <nav class="nav footer-top__nav">
+              <ul class="nav__list list-reset nav__list--gap">
+                <li class="nav__item">
+                  <a href="#" class="nav__link"> Showcase </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link"> Landing one </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link"> Sign up </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link"> Other templates </a>
+                </li>
+              </ul>
+            </nav>
+
+            <ul class="footer-top__list list-reset">
+              <li class="footer-top__item">
+                <a href="#" class="footer-top__link footer-top__link--ig"></a>
+              </li>
+              <li class="footer-top__item">
+                <a href="#" class="footer-top__link footer-top__link--tw"></a>
+              </li>
+              <li class="footer-top__item">
+                <a href="#" class="footer-top__link footer-top__link--fb"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p class="footer-bottom__designers">
+            Powered by <img src="./img/webflow.svg" alt="webflow logo"> Designed by <span class="footer-bottom__designers--accent">Veljko</span>
+          </p>
+          <span class="footer-bottom__contact">Contact</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
