refactor(nav, README, styles)
1. Изменены классы навигационных элементов с 'nav__list' на 'nav__item' для улучшения семантики.
2. Добавлен раздел в README с описанием возможностей, технологий и структуры проекта.
3. Исправлено значение 'letter-spacing' в CSS с '0.5' на '0.5px' для корректного отображения.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </a>
         <nav class="nav header__nav">
           <ul class="nav__list list-reset">
-            <li class="nav__list">
+            <li class="nav__item">
               <a href="#" class="nav__link">Landing</a>
             </li>
-            <li class="nav__list">
+            <li class="nav__item">
               <a href="#" class="nav__link">All pages</a>
             </li>
-            <li class="nav__list">
+            <li class="nav__item">
               <a href="#" class="nav__link">Template</a>
             </li>
           </ul>
